<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boxInsetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#3E4040"
    android:padding="@dimen/box_inset_layout_padding"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:deviceIds="wear"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/GameBox"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:visibility="gone"
        app:layout_boxedEdges="all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="120dp"
                android:layout_height="35dp">

                <Button
                    android:id="@+id/tile1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile1Clicked"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/tile2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile2Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/tile3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile3Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/tile4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile4Clicked"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/tile5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile5Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/tile6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile6Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/tile7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile7Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/tile8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="2dp"
                    android:onClick="tile8Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/tile9"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="tile9Clicked"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="20dp"
            android:onClick="resetBtn"
            android:text="@string/reset"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/turnText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/turnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="41dp"
            android:clickable="false"
            android:text="@string/turn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resetBtn"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/WinScreen"
        android:layout_width="134dp"
        android:layout_height="144dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/winText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_wins"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="winOkBtn"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AboutMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="166dp"
            android:layout_height="21dp"
            android:layout_marginBottom="73dp"
            android:text="@string/created_by_benjamin_ell_jones"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="166dp"
            android:layout_height="21dp"
            android:text="@string/app_version_1_0"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="166dp"
            android:layout_height="21dp"
            android:layout_marginTop="59dp"
            android:text="@string/tictactoe"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backAboutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="aboutBackBtn"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="41dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tictactoe"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/playBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="53dp"
            android:onClick="playBtn"
            android:text="@string/play"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/playAIBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/aiSettingsBtn"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="53dp"
            android:onClick="aiMenuBtn"
            android:text="@string/ai_settings"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playAIBtn"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="4dp"
            android:onClick="aboutBtn"
            android:text="@string/about"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiSettingsBtn"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/playAIBtn"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="53dp"
            android:onClick="playAIBtn"
            android:text="@string/play_ai"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/aiSettingsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playBtn"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AISettingsMenu"
        android:layout_width="141dp"
        android:layout_height="138dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/blockPlayerRuleSwitch"
            android:layout_width="129dp"
            android:layout_height="24dp"
            android:checked="true"
            android:minHeight="48dp"
            android:showText="false"
            android:text="BlockPlayerRule"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/backAISettingsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setUpWinRuleSwitch"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="BlockPlayerRule" />

        <Switch
            android:id="@+id/winRuleSwitch"
            android:layout_width="129dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:minHeight="48dp"
            android:showText="false"
            android:text="SeizeVictoryRule"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/setUpWinRuleSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="SeizeVictoryRule" />

        <Switch
            android:id="@+id/setUpWinRuleSwitch"
            android:layout_width="129dp"
            android:layout_height="24dp"
            android:checked="true"
            android:minHeight="48dp"
            android:showText="false"
            android:text="SetUpWinRule"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/blockPlayerRuleSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winRuleSwitch"
            tools:checked="true"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="SetUpWinRule" />

        <Button
            android:id="@+id/backAISettingsBtn"
            android:layout_width="92dp"
            android:layout_height="38dp"
            android:layout_marginBottom="7dp"
            android:onClick="aiMenuBackBtn"
            android:text="@string/backAISettingsBtn"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockPlayerRuleSwitch"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>